<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_end_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainColor"
    android:orientation="vertical"
    tools:context="com.example.smileys.EndScreenActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/youCaughtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/app_name"
        android:textColor="@color/mainText">
    </android.support.v7.widget.AppCompatTextView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/jokeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/heresAJoke"
        android:textColor="@color/mainText">
    </android.support.v7.widget.AppCompatTextView>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/onejoke"
            android:id="@+id/img_joke"
            android:layout_width="250dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingLeft="50dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:theme="@style/MainBtn"
                android:id="@+id/btn_play_again"
                android:layout_width="wrap_content"
                android:text="@string/playAgain"
                android:layout_height="wrap_content" />
            <Button
                android:theme="@style/MainBtn"
                android:id="@+id/btn_menu"
                android:text="@string/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
